--- a/templates/book/book.phtml
+++ b/templates/book/book.phtml
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col col-md-6">Book Data</div>
                 <div class="col col-md-6" align="right">
-                    <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#data-book">Add</button>
+                    <button type="button" class="btn btn-success btn-sm btn_new" data-toggle="modal" data-target="#modal_book">Add</button>
                 </div>
             </div>
         </div>
