--- a/templates/book/form.phtml
+++ b/templates/book/form.phtml
@@ -1,34 +1,36 @@
-<div class="modal fade" id="data-book" tabindex="-1" role="dialog" aria-labelledby="data-bookLabel" aria-hidden="true">
+<div class="modal fade" id="modal_book" tabindex="-1" role="dialog" aria-labelledby="modal_bookLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modal-title">Add Book</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                <h5 class="modal-title" id="modal_title"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             <div class="modal-body">
                 <form id="book_form">
                     <div class="mb-3 form-label-group">
-                        <input type="text" name="nome" id="nome" class="form-control">
+                        <input type="text" name="nome" id="nome" class="form-control" required>
                         <label for="nome">Nome</label>
                     </div>
                     <div class="mb-3 form-label-group">
-                        <input type="text" name="escritor" id="escritor" class="form-control">
+                        <input type="text" name="escritor" id="escritor" class="form-control" required>
                         <label for="escritor">Escritor</label>
                     </div>
                     <div class="mb-3 form-label-group">
-                        <input type="text" name="editora" id="editora" class="form-control">
+                        <input type="text" name="editora" id="editora" class="form-control" required>
                         <label for="editora">Editora</label>
                     </div>
                     <div class="mb-3 form-label-group">
-                        <input type="text" name="genero" id="genero" class="form-control">
+                        <input type="text" name="genero" id="genero" class="form-control" required>
                         <label for="genero">Gênero</label>
                     </div>
                     <div class="mb-3 form-label-group">
-                        <input type="text" name="paginas" id="paginas" class="form-control">
+                        <input type="text" name="paginas" id="paginas" class="form-control" required>
                         <label for="paginas">Páginas</label>
                     </div>
-                    <div class="modal-footer">
-                        <input type="button" class="btn btn-primary" id="add_button" name="add_button" value="Add">
+                    <div class="modal_footer">
+                        <button type="submit" class="btn btn-primary" id="btn_action" name="btn_action"></button>
                     </div>
                 </div>
             </div>
